# smarter-mcp

./: .gitignore  LICENSE  README.md  checklist.md  pymcp-spec.md  pyproject.toml  smarter-mcp-spec.md  smarter-mcp.yaml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md
docs/memory/: PROJECT_MEMORY.md  UPDATE_LOG.md
docs/reviews/: 2026-06-12-production-assessment.md
docs/superpowers/plans/: 2026-06-12-config-llm-deps.md
src/faster_mcp/: __init__.py  _decorators.py  _registry.py  _schema.py  _testing.py
src/faster_mcp/cli/: __init__.py
src/faster_mcp/config/: __init__.py  manifest.py
src/faster_mcp/extractor/: models.py  surface.py
src/faster_mcp/llm/: __init__.py
src/faster_mcp/multimodal/: __init__.py
src/faster_mcp/runtime/: __init__.py  coercion.py  instances.py  tool_wrapper.py
src/faster_mcp/server/: __init__.py  app.py  health.py  router.py  schema_endpoint.py
src/smarter_mcp/: __init__.py  __main__.py  _decorators.py  _registry.py  _schema.py  _testing.py  _typeparse.py  errors.py
src/smarter_mcp/cli/: __init__.py  _detect.py  main.py
src/smarter_mcp/config/: manifest.py
src/smarter_mcp/export/: __init__.py
src/smarter_mcp/extractor/: __init__.py  cache.py  docstrings.py  filters.py  models.py  surface.py  type_inference.py
src/smarter_mcp/llm/: __init__.py  client.py  generator.py
src/smarter_mcp/multimodal/: interceptor.py
src/smarter_mcp/runtime/: coercion.py  instances.py  tool_wrapper.py
src/smarter_mcp/server/: app.py  health.py  router.py  schema_endpoint.py  security.py
tests/: conftest.py  test_testing_framework.py
tests/fixtures/class_methods/: db_client.py
tests/fixtures/simple_functions/: math_utils.py
tests/test_config_llm_deps/: test_dead_config_wiring.py  test_h15_manifest.py  test_h16_llm.py  test_h19_deps.py  test_m14_lifecycle.py
tests/test_discovery_api/: test_c3_constructor.py  test_c4_discover_module.py  test_c5_extraction_errors.py  test_cli_init.py  test_e2e.py  test_health_endpoint.py  test_router_module_path.py
tests/test_e2e_agno/: server_tools.py  test_agno_mcp.py
tests/test_extractor/: __init__.py  test_docstrings.py  test_filters.py  test_surface.py
tests/test_low_findings/: test_low_findings.py
tests/test_runtime/: test_runtime_core.py
tests/test_schema_coercion/: test_schema_coercion.py
tests/test_security/: test_h1_insecure_defaults.py  test_h2_ssrf.py  test_h3_image_limits.py  test_h4_error_sanitization.py  test_h5_json_cache.py  test_h7_auth.py  test_h8_a1_health_schema.py  test_m18_ip_rate_limit.py
tests/validation/: README.md  run_validation.sh  validate_findings.py
