[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faster-mcp"
version = "0.1.0"
description = "Turn any Python codebase into a production-grade MCP server with zero friction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "minoHealth" },
]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
multimodal = ["Pillow>=10.0", "numpy>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "watchfiles>=0.20",
    "ruff>=0.4",
]
all = ["faster-mcp[llm,multimodal,dev]"]

[project.scripts]
faster-mcp = "faster_mcp.cli.main:cli"

[project.urls]
Homepage = "https://github.com/minoHealth/faster-mcp"
Repository = "https://github.com/minoHealth/faster-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/faster_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
