[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smarter-mcp"
version = "0.1.4"
description = "Turn any Python codebase into a production-grade MCP server with zero friction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "logic-OT" },
]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Pin to tested minor range; code imports deep internals:
    # fastmcp.server.middleware.middleware, auth.providers.jwt.StaticTokenVerifier,
    # server.dependencies.get_context — these are not stable public API.
    "fastmcp>=3.3.1,<4",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
multimodal = ["Pillow>=10.0", "numpy>=1.24"]
# openai is optional: only needed for LLM-assisted description generation.
# The lazy-import machinery in llm/client.py raises LLMNotAvailableError when absent.
llm = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "watchfiles>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "tomli>=2.0; python_version < '3.11'",
]
# e2e: Agno agent-framework + real MCP wire tests (stdio transport).
# Kept separate from dev so the main suite never needs these heavy deps.
e2e = ["agno>=1.4", "anthropic>=0.30", "mcp>=1.0"]
all = ["smarter-mcp[multimodal,llm,dev,e2e]"]

[project.scripts]
smarter-mcp = "smarter_mcp.cli.main:cli"

[project.urls]
Homepage = "https://github.com/logic-OT/smarter-mcp"
Repository = "https://github.com/logic-OT/smarter-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/smarter_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF", "S"]
ignore = [
    # Line length — docstrings and comments often exceed 100 chars; formatter handles wrapping
    "E501",
    # 0.0.0.0 binding is intentional and config-gated (default is 127.0.0.1 since H1 fix)
    "S104",
]

[tool.ruff.lint.per-file-ignores]
# assert is idiomatic in pytest; bandit S101 fires on every assertion
"tests/**" = ["S101"]

[tool.mypy]
# Pragmatic mypy config — not strict-everywhere; scoped to src/ for CI.
# Goal: run without crashing and catch obvious type errors in the public API.
# mypy is run as non-blocking in CI (continue-on-error: true) until the full
# type annotation pass is completed.
python_version = "3.10"
ignore_missing_imports = true
# fastmcp, PIL, numpy, openai have incomplete or absent stubs
warn_unused_ignores = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: Agno + real MCP wire integration tests (stdio transport)",
]
